Adds delete method
